[package]
name = "gem-puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
num = "0.4.0"
rand = "0.8.5"
yew = "0.19.3"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "HtmlSelectElement"
]
